[gd_scene load_steps=8 format=3 uid="uid://bthpxev4cvx8j"]

[ext_resource type="Script" path="res://Scripts/Agents/Agent.gd" id="1_56vq6"]
[ext_resource type="PackedScene" uid="uid://78qqxoqecl1p" path="res://Models/little_guy.glb" id="2_63leg"]
[ext_resource type="Animation" uid="uid://cc02747b2p5hd" path="res://Animations/temp_marker_spin.res" id="3_re5xy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ki8gd"]
radius = 0.430438
height = 0.972774

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tabyh"]
shading_mode = 0
diffuse_mode = 3
albedo_color = Color(0.286275, 0.858824, 0.827451, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_tvpa4"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_es77x"]
_data = {
"spin": ExtResource("3_re5xy")
}

[node name="Agent" type="CharacterBody3D"]
collision_layer = 64
script = ExtResource("1_56vq6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.528857, 0)
shape = SubResource("CapsuleShape3D_ki8gd")

[node name="little_guy" parent="." instance=ExtResource("2_63leg")]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="CHAR_NAME" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2517, 0)
pixel_size = 0.001
billboard = 1
double_sided = false
fixed_size = true
text = "NAME"
font_size = 22

[node name="SELECTED" type="MeshInstance3D" parent="."]
transform = Transform3D(0.33, 0, 0, 0, 0.33, 0, 0, 0, 0.33, 0, 0.01, 0)
visible = false
material_override = SubResource("StandardMaterial3D_tabyh")
transparency = 0.79
mesh = SubResource("PlaneMesh_tvpa4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="SELECTED"]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_es77x")
}

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
